updated admissions page

--- a/academics/index.html
+++ b/academics/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/layout.css">
+  <link rel="stylesheet" href="../assets/css/academics.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -69,18 +70,19 @@
 
   <main role="main">
     <article class="container">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
-        reprehenderit impedit.</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint unde sapiente eius non magnam at reprehenderit
-        perferendis. Necessitatibus officiis qui fugit possimus vel quae facere illo, neque aliquam iste, voluptas,
-        quidem amet. Harum voluptatum adipisci ex veniam facere exercitationem laborum excepturi necessitatibus ut
-        nostrum veritatis dolorum, incidunt aperiam voluptates! Magnam architecto a assumenda vero? Doloremque iste
-        corporis enim earum provident optio mollitia asperiores, dicta reiciendis molestias ipsum. Deserunt, eaque et
-        aperiam tenetur, ut ullam tempora hic voluptatibus sit, laudantium vero accusantium esse rerum? Voluptate ullam
-        id odit possimus, ea soluta officia autem ratione recusandae repellat aperiam, harum delectus porro deleniti.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum hic reiciendis voluptates id fugiat quae omnis
-        sint quis, ullam, recusandae unde iste nulla debitis optio.</p>
-
+      <h1>Academics</h1>
+      <h4>Curricula</h4>
+      <p>The MIS curricula are designed to encourage each child to achieve their highest potential as well as to meet the English Curriculum standards.  The focus is on the physical, psychological, intellectual and social development of the child.</p>
+      <h4>Preschool & Kindergarten</h4>
+      <p>MIS offers Preschool & Kindergarten education for children aged between 2 and 5 years old. We use the Montessori educational method in parallel with the Early Years Foundation Stage of the English curriculum. Both approaches promote the key areas of care, learning and development.
+      In the UK, Preschool is known as the Early Year Foundation Stage (EYFS), which covers education for children before they reach five. Meanwhile 'Kindergarten' here in Thailand, is equivalent to the ‘Reception Year’ in the UK, which admits children who turn 5 during the academic year.</p>
+      <h4>Primary School</h4>
+      <p>Our primary school caters for children aged between 5 and 11 years old. It offers a broad and balanced curriculum based on the English National Curriculum. We offer high academic standards and a wide range of enrichment curriculum activities. All our pupils are treated as individuals, and their unique talents are nurtured and developed.
+      ​</p>
+      <h4>Secondary School</h4>
+      <p>Secondary School is geared towards 11 to 16 year old. We start with the English National Curriculum as the foundation and we supplement it with important ideas from other national and international sources in order to create well-grounded critical thinkers. There are a number of activities and tasks which encourages high achievement and academic success. All the pupils are encouraged to embrace a broader view of their world as they mature into their teen years.</p>
+      <p>Key Stage 3 ( Ages 11- 14 ) starts with the English National Curriculum as the foundation and is supplemented with other National and International sources to create well-grounded critical thinkers.  There is a number of activities and tasks which encourage high achievement and academic success.
+      All the pupils are encouraged to embrace a broader view of their world as they mature into their teen years.</p>
     </article>
 
 
