--- a/admissions/index.html
+++ b/admissions/index.html
@@ -73,13 +73,19 @@
       <div class="row">
         <div class="col-lg-3 sticky-parent">
           <aside class="sticky">
+          <h5>Quick Links</h5>
             <ul>
-              <li>Admissions Procedure</li>
-              <li>Admissions Procedure</li>
+              <a href="#admissions-procedure"><li>&rtrif;Admissions Procedure</li></a>
+              <a href="#requirements"><li>&rtrif;Requirements for enrollee</li></a>
+              <a href="#form"><li>&rtrif;Enrollment form instructions</li></a>
+              <a href="#dates"><li>&rtrif;Term Dates 2018-19</li></a>
+              <a href="#fees"><li>&rtrif;Tuition Fees 2018-19</li></a>
+              <a href="#school-hours"><li>&rtrif;School Hours</li></a>
             </ul>
           </aside>
         </div>
         <article class="col-lg-9">
+          <a name="admissions-procedure"></a>
           <h1>Admissions Procedure</h1>
           <p>Generally, we assess children for Admission on an individual case by case basis.For Primary School and
             Middle
@@ -94,7 +100,8 @@
             be invited to observe the class for which they wish to enroll. This is so that your child can get a feel
             for
             the class and its ability, and for the Class Teacher to make an assessment.</p>
-          <h4>Photo and Document Requirements from New Children</h4>
+          <a name="requirements"></a>
+          <h4>Photo and document requirements for enrollee</h4>
           <ul>
             <li>Four photos (3.5 x 4.5 cm)</li>
             <li>1 copy of Child’s Passport or Birth Certificate</li>
@@ -104,7 +111,8 @@
             <li>1 copy of previous School Report</li>
             <li>1 copy of document showing child's previous name (if it has been changed)</li>
           </ul>
-          <h4>Enrolment Application Form Instructions</h4>
+          <a name="form"></a>
+          <h4>Enrollment application form instructions</h4>
           <p>Please fill-in the enrollment form and provide all the necessary details. It is essential that we not only
             have your up-to-date home/mobile telephone number but also an <strong>up-to-date emergency contact number</strong>
             where we can reach a family member quickly.</p>
@@ -121,6 +129,7 @@
           </ul>
           <hr>
           <!-- Term Dates 2018-19 -->
+          <a name="dates"></a>
           <div class="table-responsive">
             <table class="table">
               <thead class="text-center thead-dark">
@@ -156,14 +165,15 @@
           <hr>
 
           <!-- Tuition Fees 2018-19 -->
+          <a name="fees"></a>
           <div class="table-responsive">
             <table class="table">
               <thead class="text-center thead-dark">
                 <tr>
-                  <th scope="col" colspan=5>Tuition Fees &middot; Academic Year 2018-19</td>
+                  <th scope="col" colspan="5">Tuition Fees &middot; Academic Year 2018-19</th>
                 </tr>
                 <tr>
-                  <th scope="col" colspan=2 class="align-middle">Year Level</th>
+                  <th scope="col" colspan="2" class="align-middle">Year Level</th>
                   <th scope="col">Admission Fee/Family</th>
                   <th scope="col">Tuition Fee per Term</th>
                   <th scope="col" class="align-middle">Days per Week</th>
@@ -172,9 +182,9 @@
               <tbody>
                 <tr>
                   <!-- Early Years Tuition Fee -->
-                  <th scope="row" rowspan=4 class="align-middle text-center eyfs-absolute-position">Early Years</th>
-                  <td rowspan=2 class="align-middle">Preschool A</td>
-                  <td rowspan=2 class="align-middle">&#3647; 50,000.00</td>
+                  <th scope="row" rowspan="4" class="align-middle text-center eyfs-absolute-position">Early Years</th>
+                  <td rowspan="2" class="align-middle">Preschool A</td>
+                  <td rowspan="2" class="align-middle">&#3647; 50,000.00</td>
                   <td>&#3647; 53,000.00</td>
                   <td class="whitespace-nowrap">(9:00 AM - 2:00 PM) 3 days per week</td>
                 </tr>
@@ -186,7 +196,7 @@
                   <td>Preschool B</td>
                   <td>&#3647; 50,000.00</td>
                   <td>&#3647; 62,000.00</td>
-                  <td rowspan=2 class="align-middle">(9:00 AM - 2:30 PM) 5 days per week</td>
+                  <td rowspan="2" class="align-middle">(9:00 AM - 2:30 PM) 5 days per week</td>
                 </tr>
                 <tr>
                   <td>Kindergarten</td>
@@ -197,11 +207,11 @@
                 
                 <!-- Primary Tuition Fee -->
                 <tr>
-                  <th scope="row" rowspan=2 class="align-middle text-center eyfs-absolute-position">Primary</th>
+                  <th scope="row" rowspan="2" class="align-middle text-center eyfs-absolute-position">Primary</th>
                   <td class="whitespace-nowrap">Key Stage 1 (Year 1 to 2)</td>
                   <td>&#3647; 50,000.00</td>
                   <td>&#3647; 72,000.00</td>
-                  <td rowspan=2 class="align-middle">(9:00 AM - 3:30 PM) 5 days per week</td>
+                  <td rowspan="2" class="align-middle">(9:00 AM - 3:30 PM) 5 days per week</td>
                 </tr>
                 <tr>
                   <td class="whitespace-nowrap">Key Stage 2 (Year 3 to 6)</td>
@@ -212,11 +222,11 @@
 
                 <!-- Secondary Tuition Fee -->
                 <tr>
-                  <th scope="row" rowspan=2 class="align-middle text-center eyfs-absolute-position">Secondary</th>
+                  <th scope="row" rowspan="2" class="align-middle text-center eyfs-absolute-position">Secondary</th>
                   <td class="whitespace-nowrap">Key Stage 3 (Year 7 to 9)</td>
                   <td>&#3647; 50,000.00</td>
                   <td>&#3647; 90,000.00</td>
-                  <td rowspan=2 class="align-middle">(8:20 AM - 3:30 PM) 5 days per week</td>
+                  <td rowspan="2" class="align-middle">(8:20 AM - 3:30 PM) 5 days per week</td>
                 </tr>
                 <tr>
                   <td>Key Stage 4 (IGCSE)</td>
@@ -228,7 +238,6 @@
             </table>
           </div>
           <!-- End of Tuition Fees 2018-19 -->
-          <hr>
 
           <!-- Required Fees -->
           <div class="table-responsive">
@@ -248,7 +257,7 @@
                 </tr>
                 <tr>
                   <th scope="row">Swimming Pool Care</th>
-                  <td colspan=2 class="text-center">&#3647; 2,500.00</td>
+                  <td colspan="2" class="text-center">&#3647; 2,500.00</td>
                 </tr>
               </tbody>
             </table>
@@ -259,29 +268,33 @@
             <table class="table table-bordered">
               <thead class="text-center thead-dark">
                 <tr>
-                  <th scope="col" colspan=2>Optional Fee</th>
+                  <th scope="col" colspan="2">Optional Fee</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row">Hot Meal (lunch)</th>
-                  <td colspan=2>&#3647; 6,000.00</td>
+                  <td colspan="2">&#3647; 6,000.00</td>
                 </tr>
                 <tr>
                   <th scope="row">Transportation (depending on location)</th>
-                  <td colspan=2>&#3647; 8,000 - 19,000.00</td>
+                  <td colspan="2">&#3647; 8,000 - 19,000.00</td>
                 </tr>
               </tbody>
             </table>
           </div>
           <hr>
 
-          <h1>School Hours, Term Dates</h1>
+          <!-- School Hours -->
+          <a name="school-hours"></a>
           <div class="table-responsive">
             <table class="table ">
               <thead class="text-center thead-dark">
                 <tr>
-                  <th scope="col" colspan=2 class="align-middle">Level</th>
+                  <th scope="col" colspan="6">School Hours</th>
+                </tr>
+                <tr>
+                  <th scope="col" colspan="2" class="align-middle">Level</th>
                   <th scope="col" class="align-middle">Age (Years)</th>
                   <th scope="col" class="align-middle">Days per week</th>
                   <th scope="col" class="align-middle">Time</th>
@@ -291,12 +304,12 @@
               <tbody>
                 <tr>
                   <!-- Early Years Foundation Stage (EYFS) -->
-                  <th scope="row" rowspan=4 class="align-middle eyfs-absolute-position">Early Years</th>
-                  <td class="whitespace-nowrap align-middle" rowspan=2>Preschool A</td>
-                  <td rowspan=2 class="align-middle">2 - 3</td>
+                  <th scope="row" rowspan="4" class="align-middle eyfs-absolute-position">Early Years</th>
+                  <td class="whitespace-nowrap align-middle" rowspan="2">Preschool A</td>
+                  <td rowspan="2" class="align-middle">2 - 3</td>
                   <td class="whitespace-nowrap">3 days</td>
                   <td class="whitespace-nowrap">9:00 AM - 2:00PM</td>
-                  <td rowspan=2 class="align-middle">We will be accepting students who have turned <mark>2 years old</mark>
+                  <td rowspan="2" class="align-middle">We will be accepting students who have turned <mark>2 years old</mark>
                     on or
                     before August 31st of the new academic year.</td>
                 </tr>
@@ -324,7 +337,7 @@
 
                 <!-- Primary (Key Stage 1 & 2) -->
                 <tr>
-                  <th scope="row" rowspan=2 class="align-middle eyfs-absolute-position">Primary</th>
+                  <th scope="row" rowspan="2" class="align-middle eyfs-absolute-position">Primary</th>
                   <td class="whitespace-nowrap align-middle">Key Stage 1</td>
                   <td class="align-middle">5 - 7</td>
                   <td class="whitespace-nowrap align-middle">5 days</td>
@@ -342,7 +355,7 @@
 
                 <!-- Secondary (Key Stage 3 & 4) -->
                 <tr>
-                  <th scope="row" rowspan=2 class="align-middle eyfs-absolute-position">Secondary</th>
+                  <th scope="row" rowspan="2" class="align-middle eyfs-absolute-position">Secondary</th>
                   <td class="whitespace-nowrap align-middle">Key Stage 3</td>
                   <td class="align-middle">11 - 14</td>
                   <td class="whitespace-nowrap align-middle">5 days</td>
@@ -360,6 +373,7 @@
               </tbody>
             </table>
           </div>
+          <!-- End of School Hours -->
 
         </article>
       </div>
