--- a/our-school/index.html
+++ b/our-school/index.html
@@ -70,7 +70,7 @@
   </header>
 
   <main role="main">
-    <article class="container grid-container">
+    <div class="container grid-container">
       <section class="welcome">
         <!-- Carousel slider -->
         <div id="carouselExampleControls" class="carousel slide carousel-fade carousel-img" data-ride="carousel">
@@ -116,10 +116,42 @@
         Sincerely<br>
         School Management
       </section>
+    </div>
 
+    <article class="container">
+    <hr>
+      <div class="row">
 
-      <section>
+      <div class="col-lg-3 sticky-parent">
+        <aside class="sticky">
+          <h5>Quick Links</h5>
+          <ul>
+            <a href="#mission"><li>&rtrif;Mission</li></a>
+            <a href="#vision"><li>&rtrif;Vision</li></a>
+            <a href="#history"><li>&rtrif;History</li></a>
+            <a href="#present-future"><li>&rtrif;The Present and the Future</li></a>
+            <a href="#teachers"><li>&rtrif;MIS Teachers</li></a>
+            <a href="#gen-info"><li>&rtrif;General School Information</li></a>
+          </ul>
+        </aside>
+      </div>
+
+      <section class="col-lg-9">
+        <a name="mission"></a>
+        <h2>Mission</h2>
+        <p>Mooltripakdee International School aims to nurture a happy, safe and welcoming community where children are equipped with positive attitudes, skills and knowledge to enable them to enjoy their childhood and to serve as a foundation for their future development.</p>
+        <a name="vision"></a>
+        <h2>Vision</h2>
+        <p>MIS aims to:</p>
+        <ul>
+          <li>Help children become confident and enthusiastic life-long learners.</li>
+          <li>Help children develop lively, enquiring minds.</li>
+          <li>Encourage children to acquire a social awareness, as well as an appreciation of their own and of other cultures.</li>
+          <li>Contribute to peace and understanding by developing respect and valuing differences.</li>
+        </ul>
+
         <hr>
+        <a name="history"></a>
         <h2>History</h2>
         <p>Mooltripakdee International School opened its doors to students on 25th August 2010. The school was built
           and
@@ -130,10 +162,12 @@
           had
           to close due to the lease on the land expiring. <span class="tooltip-text" title="Mooltripakdee Children's Centre International">MCCI</span> teachers and the remaining students amalgamated with MIS
           in August 2011.</p>
+        <a name="present-future"></a>
         <h4>The Present and the Future</h4>
         <p>Presently, the school has over 600 students. Our student population is made up of children from several
           countries. We anticipate that our student numbers will increase to around 700 for next school year beginning
           August 2018.</p>
+        <a name="teachers"></a>
         <h4>MIS Teachers</h4>
         <ul>
           <li>Act as role models, developing good relationships between Pupils, Parents and their Teaching Teams.</li>
@@ -151,6 +185,7 @@
         <p>The Principal monitors the Academic progress throughout the School as well as undertaking administrative and
           other associated tasks.</p>
         <hr>
+        <a name="gen-info"></a>
         <h2>General School Information</h2>
         <h4>Uniform</h4>
         <p>The School Policy on School uniform is as follows:</p>
@@ -196,6 +231,7 @@
         <h4>Snack Time During Break</h4>
         <p>This is a relaxing time for your child to enjoy a drink of milk or water and a biscuit provided by the school.</p>
       </section>
+      </div>
     </article>
 
     <div class="three-links">
