--- a/admissions/index.html
+++ b/admissions/index.html
@@ -39,19 +39,19 @@
     <nav class="container">
       <div class="fixed-navbar">
         <span>
-          <a href="#">
-            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+          <a href="/">
+            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
               alt="">
           </a>
         </span>
         <span class="logo-name">Mooltripakdee International School</span>
-        <a href=".." class="btn btn-outline-success navbar-link">Home</a>
-        <a href="../our-school" class="btn btn-outline-success navbar-link">Our School</a>
-        <a href="../academics" class="btn btn-outline-success navbar-link">Academics</a>
-        <a href="#" class="current-page">Admissions</a>
-        <a href="../events" class="btn btn-outline-success navbar-link">Events</a>
-        <a href="../our-team" class="btn btn-outline-success navbar-link">Our Team</a>
-        <a href="../contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
+        <a href="/" class="btn btn-outline-success navbar-link">Home</a>
+        <a href="/our-school" class="btn btn-outline-success navbar-link">Our School</a>
+        <a href="/academics" class="btn btn-outline-success navbar-link">Academics</a>
+        <a href="/admissions" class="current-page">Admissions</a>
+        <a href="/events" class="btn btn-outline-success navbar-link">Events</a>
+        <a href="/our-team" class="btn btn-outline-success navbar-link">Our Team</a>
+        <a href="/contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
         <!-- Button trigger modal -->
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
       </div>
@@ -60,7 +60,7 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="../img/admission.jpg" alt="">
+      <img src="/img/admission.jpg" alt="">
       <figcaption class="container">
         <span class="sub-header-location">Main Office</span>
       </figcaption>
@@ -481,15 +481,15 @@
           </span>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">About Us</a>
+          <a href="/our-school">About Us</a>
           <a href="#">Map location</a>
           <a href="#">Blog</a>
           <a href="#">Gallery</a>
           <a href="#">Calendar</a>
-          <a href="#">Events</a>
+          <a href="/events">Events</a>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">School Fees</a>
+          <a href="/admissions/#fees">School Fees</a>
           <a href="#">FAQ</a>
           <a href="#">Online Portal</a>
           <a href="#">Careers</a>
@@ -504,7 +504,7 @@
         <span>Mooltripakdee International School &copy; 2018&nbsp;</span>
         &middot;
         <span>
-          <a href="#">&nbsp;Site Map&nbsp;</a>
+          <a href="/sitemap">&nbsp;Site Map&nbsp;</a>
         </span>
         &middot;
         <span>
