--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="fixed-navbar">
         <span>
           <a href="/">
-            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
               alt="">
           </a>
         </span>
@@ -427,15 +427,15 @@
           </span>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">About Us</a>
+          <a href="/our-school">About Us</a>
           <a href="#">Map location</a>
           <a href="#">Blog</a>
           <a href="#">Gallery</a>
           <a href="#">Calendar</a>
-          <a href="#">Events</a>
+          <a href="events">Events</a>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">School Fees</a>
+          <a href="/admissions/#fees">School Fees</a>
           <a href="#">FAQ</a>
           <a href="#">Online Portal</a>
           <a href="#">Careers</a>
@@ -450,7 +450,7 @@
         <span>Mooltripakdee International School &copy; 2018&nbsp;</span>
         &middot;
         <span>
-          <a href="#">&nbsp;Site Map&nbsp;</a>
+          <a href="sitemap">&nbsp;Site Map&nbsp;</a>
         </span>
         &middot;
         <span>
