--- a/our-school/index.html
+++ b/our-school/index.html
@@ -39,19 +39,19 @@
     <nav class="container">
       <div class="fixed-navbar">
         <span>
-          <a href="#">
-            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+          <a href="/">
+            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
               alt="">
           </a>
         </span>
         <span class="logo-name">Mooltripakdee International School</span>
-        <a href=".." class="btn btn-outline-success navbar-link">Home</a>
-        <a href="#" class="current-page">Our School</a>
-        <a href="../academics" class="btn btn-outline-success navbar-link">Academics</a>
-        <a href="../admissions" class="btn btn-outline-success navbar-link">Admissions</a>
-        <a href="../events" class="btn btn-outline-success navbar-link">Events</a>
-        <a href="../our-team" class="btn btn-outline-success navbar-link">Our Team</a>
-        <a href="../contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
+        <a href="/" class="btn btn-outline-success navbar-link">Home</a>
+        <a href="/our-school" class="current-page">Our School</a>
+        <a href="/academics" class="btn btn-outline-success navbar-link">Academics</a>
+        <a href="/admissions" class="btn btn-outline-success navbar-link">Admissions</a>
+        <a href="/events" class="btn btn-outline-success navbar-link">Events</a>
+        <a href="/our-team" class="btn btn-outline-success navbar-link">Our Team</a>
+        <a href="/contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
         <!-- Button trigger modal -->
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
       </div>
@@ -225,7 +225,7 @@
         </blockquote>
         <p>We will inform you if your child has had more than a bump or scrape at school. Small children do have a tendency to have accidents in school and if this results in your child requiring hospital treatment, we will not hesitate to inform you and seek proper care for your child. We will consult your child’s individual emergency information, and you will be contacted. If necessary, your child may be taken to the hospital indicated on the emergency sheet, and you will be expected to meet us there. The <strong>Parental Consent Form</strong> will accompany your child so that immediate treatment may be given. It is very important that you keep these details up to date. The closest hospital to our school is the <strong>Bangkok Pattaya Hospital</strong>. The contribution of the school is the maximum amount of <strong>&#3647;10,000</strong> per visit.</p>
         <h4>School Meals</h4>
-        <p>School Meals are served in the dining room under the supervision of teaching assistants. We serve a variety of hot food daily. Hot school meals are changed on a termly basis (see <a href="#">fees</a>).</p>
+        <p>School Meals are served in the dining room under the supervision of teaching assistants. We serve a variety of hot food daily. Hot school meals are changed on a termly basis (see <a href="/admissions/#fees">fees</a>).</p>
         <h4>Packed Lunches</h4>
         <p>If your child does not participate in our paid school lunch program, then lunches should be sent to school in a suitable strong container with your child’s name and class clearly marked on the front. Please consider a cooling device inside, like a frozen drink and/or a cool box to protect your child’s food from heat.</p>
         <h4>Snack Time During Break</h4>
@@ -336,15 +336,15 @@
           </span>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">About Us</a>
+          <a href="/our-school">About Us</a>
           <a href="#">Map location</a>
           <a href="#">Blog</a>
           <a href="#">Gallery</a>
           <a href="#">Calendar</a>
-          <a href="#">Events</a>
+          <a href="/events">Events</a>
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
-          <a href="#">School Fees</a>
+          <a href="/admissions/#fees">School Fees</a>
           <a href="#">FAQ</a>
           <a href="#">Online Portal</a>
           <a href="#">Careers</a>
@@ -359,7 +359,7 @@
         <span>Mooltripakdee International School &copy; 2018&nbsp;</span>
         &middot;
         <span>
-          <a href="#">&nbsp;Site Map&nbsp;</a>
+          <a href="/sitemap">&nbsp;Site Map&nbsp;</a>
         </span>
         &middot;
         <span>
