--- a/events/giving/index.html
+++ b/events/giving/index.html
@@ -23,11 +23,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/layout.css">
-  <link rel="stylesheet" href="/assets/css/events.css">
+  <link rel="stylesheet" href="/assets/css/giving.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <title>Our School &vert; Mooltripakdee International School</title>
+  <title>Giving &vert; Mooltripakdee International School</title>
 
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
@@ -60,9 +60,9 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="/img/events.jpg" alt="">
+      <img src="/img/giving.jpg" alt="">
       <figcaption class="container">
-        <span class="sub-header-location">Football Field</span>
+        <span class="sub-header-location">Nan Province</span>
       </figcaption>
     </figure>
 
@@ -70,30 +70,72 @@
 
   <main role="main">
     <article class="container">
+      <div class="row">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <strong>You are here:&nbsp;</strong>
+            <li class="breadcrumb-item"><a href="/events">Events</a></li>
+            <li class="breadcrumb-item active" aria-current="page"><span class="underline">Giving (School Charity)</span></li>
+          </ol>
+        </nav>
+      </div>
 
       <div class="row">
         <aside class="col-lg-3 sticky-parent">
           <div class="sticky">
-            <h5>Quick Links</h5>
+            <h5>How to get involved:</h5>
+            <p>Here are the following ways you can get involved with MIS with a current project by:</p>
             <ul>
-              <a href="/events/giving">
-                <li>&rtrif;Giving (School Charity)</li>
-              </a>
-              <a href="#upcoming"><li>&rtrif;Upcoming Events</li></a>
+              <li>&rtrif;Joining us in an outreach to a rural school.</li>
+              <li>&rtrif;Organising a fundraising event however small.</li>
+              <li>&rtrif;Encouraging your children to get involved.</li>
+              <li>&rtrif;Donating money in cash/online/EFT.</li>
             </ul>
           </div>
         </aside>
 
         <section class="col-lg-9">
-          <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
-            reprehenderit impedit.</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum hic reiciendis voluptates id fugiat quae
-            omnis
-            sint quis, ullam, recusandae unde iste nulla debitis optio.</p>
+          <h1>Giving</h1>
+          <p>MIS has embarked on getting involved in projects to support Thai schools in rural areas.</p>
+          <p>The theme for this project is:</p>
+          <blockquote>
+            'Empowering youth for a brighter future.'
+          </blockquote>
+          <h3>Fundraising</h3>
+          <p>The School has a variety of fundraising events organized and supported by staff members, parents, and
+            students. This is to encourage young learners to have a good education to equip them for life.</p>
+          <h4>Project 1 for Term 1 (16 to 20 July 2018)</h4>
+          <p>A donation in forms of food i.e. <strong>rice, goods, 220v power transformer, hats</strong> from the
+            <strong>Lost and Found Project</strong>, milk from parents' donation and sports equipment to 3 schools
+            <strong>(Baan Hauy Lua, Khun Nam Jorn and Pha Gum) located in Nan Province.</strong></p>
+          <p>Additionally, the M.I.S. family also joined with them in tree planting.</p>
+
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </section>
       </div>
 
     </article>
+
 
     <div class="three-links">
       <div class="container flex-links">
