added inquiry form (wip)

--- a/events/index.html
+++ b/events/index.html
@@ -35,9 +35,11 @@
 </head>
 
 <body>
-  <div class="subpage-tint">
-    <nav class="container">
-      <div class="fixed-navbar">
+  <nav class="subpage-tint">
+    <div class="container">
+
+      <!-- desktop view -->
+      <div class="fixed-navbar d-none d-lg-block">
         <span>
           <a href="/">
             <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
@@ -55,8 +57,12 @@
         <!-- Button trigger modal -->
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
       </div>
-    </nav>
-  </div>
+      <!-- end - desktop view -->
+
+      <!-- mobile view -->
+      <!-- end - mobile view -->
+    </div>
+  </nav>
 
   <header class="sub-header-image">
     <figure>
@@ -185,7 +191,7 @@
                           may be regarded as direct marketing in relation to our school.
                         </small>
                       </div>
-                      <button type="submit" class="btn btn-primary">Submit Enquiry</button>
+                      <button type="submit" class="btn btn-outline-secondary">Submit Enquiry</button>
                     </form>
                   </div>
                 </div>
