--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/layout.css">
-  <link rel="stylesheet" href="assets/css/homepage.css">
+  <!-- <link rel="stylesheet" href="assets/css/layout.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/homepage.css"> -->
+  <link rel="stylesheet" href="assets/css/main/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -387,6 +388,10 @@
                 <div class="modal-body">
                   <!-- Modal Body -->
                   <form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzYXRvw_wdpP6ge_TeefouZX-vsSXBHUqBlO3r7BGr1Q2mqoPj2/exec">
+                    <!--input id must be honeypot or else it wont work-->
+                    <label class="sr-only">Keep this field blank</label>
+                    <input id="honeypot" type="text" name="honeypot" value="" />
+
                     <div class="form-elements">
                       <p>Please fill in the short form below and one of our dedicated admissions team
                         will get back to
