--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/layout.css">
-  <link rel="stylesheet" href="assets/css/homepage.css">
+  <link rel="stylesheet" href="/dist/css/layout.min.css">
+  <link rel="stylesheet" href="/dist/css/homepage.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -400,12 +400,15 @@
                       <div class="form-group">
                         <label for="exampleFullName" hidden></label>
                         <input type="text" name="name" class="form-control" id="exampleFullName" aria-describedby="fullName"
-                          placeholder="Enter your full name">
+                          placeholder="Enter your full name" required>
                       </div>
                       <div class="form-group">
                         <label for="exampleInputEmail1" hidden></label>
                         <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                          placeholder="Enter email">
+                          placeholder="Enter email" required>
+                        <div class="alert alert-danger email-invalid" style="display:none" role="alert">
+                          Must be a valid email address
+                        </div>
                         <small id="emailHelp" class="form-text text-muted">We'll never share
                           your email with anyone
                           else.</small>
@@ -414,10 +417,10 @@
                       <div class="form-group">
                         <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
                         <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"
-                          placeholder="Is there anything else you'd like to tell us?"></textarea>
+                          placeholder="Is there anything else you'd like to tell us?" required></textarea>
                       </div>
                       <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
                         <small>
                           <label class="form-check-label text-muted" for="exampleCheck1"></label>
                           By ticking this box, you are accepting our
@@ -489,7 +492,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-  <script data-cfasync="false" type="text/javascript" src="/assets/js/form-submission-handler.js"></script>
+  <script data-cfasync="false" type="text/javascript" src="/dist/js/form-submission-handler.min.js"></script>
 
   <!-- Optional JavaScript -->
   <script>
