--- a/admissions/index.html
+++ b/admissions/index.html
@@ -35,11 +35,11 @@
 </head>
 
 <body>
-  <nav class="subpage-tint">
+  <nav class="subpage-tint d-none d-lg-block">
     <div class="container">
 
       <!-- desktop view -->
-      <div class="fixed-navbar d-none d-lg-block">
+      <div class="fixed-navbar">
         <span>
           <a href="/">
             <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
@@ -77,7 +77,7 @@
   <main role="main">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 sticky-parent">
+        <div class="col-md-3 sticky-parent d-none d-md-block">
           <aside class="sticky">
           <h5>Quick Links</h5>
             <ul>
@@ -90,7 +90,7 @@
             </ul>
           </aside>
         </div>
-        <article class="col-lg-9">
+        <article class="col-md-9 col-sm-12">
           <a name="admissions-procedure"></a>
           <h1>Admissions Procedure</h1>
           <p>Generally, we assess children for Admission on an individual case by case basis.For Primary School and
