--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="/dist/css/layout.min.css">
-  <link rel="stylesheet" href="/dist/css/homepage.min.css">
+  <link rel="stylesheet" href="dist/css/layout.min.css">
+  <link rel="stylesheet" href="dist/css/homepage.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -31,11 +31,11 @@
 </head>
 
 <body>
-  <nav class="tint">
+  <nav class="tint d-none d-lg-block">
     <div class="container">
 
       <!-- desktop view -->
-      <div class="fixed-navbar d-none d-lg-block">
+      <div class="fixed-navbar">
         <span>
           <a href="/">
             <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
@@ -53,6 +53,7 @@
       <!-- end - desktop view -->
 
       <!-- mobile view -->
+
       <!-- end - mobile view -->
     </div>
   </nav>
