--- a/events/giving/index.html
+++ b/events/giving/index.html
@@ -35,11 +35,11 @@
 </head>
 
 <body>
-  <nav class="subpage-tint">
+  <nav class="subpage-tint d-none d-lg-block">
     <div class="container">
 
       <!-- desktop view -->
-      <div class="fixed-navbar d-none d-lg-block">
+      <div class="fixed-navbar">
         <span>
           <a href="/">
             <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-logo.png"
