--- a/index.html
+++ b/index.html
@@ -31,6 +31,44 @@
 </head>
 
 <body>
+  <!-- mobile view -->
+  <nav class="navbar navbar-fixed-top d-block d-xl-none d-flex justify-content-between navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png" alt="MIS logo">
+      Mooltripakdee International School
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav text-center mr-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="our-school">Our School</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="academics">Academics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="events">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="admissions">Admissions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="our-team">Our Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- end - mobile view -->
   <nav class="tint d-none d-lg-block">
     <div class="container">
 
@@ -52,9 +90,6 @@
       </div>
       <!-- end - desktop view -->
 
-      <!-- mobile view -->
-
-      <!-- end - mobile view -->
     </div>
   </nav>
 
@@ -422,11 +457,12 @@
                       </div>
                       <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
-                          <label class="form-check-label" for="exampleCheck1">
-                            By ticking this box, you are accepting our
-                            <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
-                              title="Privacy Policy">Privacy & Cookie Policy</a> and giving us your permission to use this information which may be regarded as direct marketing in relation to our school.
-                          </label>
+                        <label class="form-check-label" for="exampleCheck1">
+                          By ticking this box, you are accepting our
+                          <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
+                            title="Privacy Policy">Privacy & Cookie Policy</a> and giving us your permission to use
+                          this information which may be regarded as direct marketing in relation to our school.
+                        </label>
                       </div>
                       <button type="submit" class="btn btn-outline-secondary">Submit Enquiry</button>
                     </div>
@@ -468,16 +504,16 @@
     <div class="container">
       <div class="d-flex justify-content-center">
         <small class="row copyright-links">
-        <div>Mooltripakdee International School &copy; 2018&nbsp;</div>
-        <div class="d-none d-md-block">&middot;</div>
-        <div>
-          <a href="sitemap">&nbsp;Site Map&nbsp;</a>
-        </div>
-        <div class="d-none d-md-block">&middot;</div>
-        <div>
-          <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
-            title="Privacy Policy">&nbsp;Privacy &amp; Cookie Policy</a>
-        </div>
+          <div>Mooltripakdee International School &copy; 2018&nbsp;</div>
+          <div class="d-none d-md-block">&middot;</div>
+          <div>
+            <a href="sitemap">&nbsp;Site Map&nbsp;</a>
+          </div>
+          <div class="d-none d-md-block">&middot;</div>
+          <div>
+            <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
+              title="Privacy Policy">&nbsp;Privacy &amp; Cookie Policy</a>
+          </div>
         </small>
       </div>
     </div>
