temporary fix for mobile navbar

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -73,7 +73,7 @@
     </div>
   </nav>
   <!-- end - mobile view -->
-  <nav class="subpage-tint d-none d-lg-block">
+  <nav class="subpage-tint d-none d-xl-block">
     <div class="container">
 
       <!-- desktop view -->
