--- a/our-team/index.html
+++ b/our-team/index.html
@@ -35,7 +35,46 @@
 </head>
 
 <body>
-  <nav class="subpage-tint d-none d-lg-block">
+  <!-- mobile view -->
+  <nav class="navbar navbar-fixed-top d-block d-xl-none d-flex justify-content-between navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png"
+        alt="MIS logo">
+      Mooltripakdee International School
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav text-center mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/our-school">Our School</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/academics">Academics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/events">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admissions">Admissions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/our-team">Our Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- end - mobile view -->
+  <nav class="subpage-tint d-none d-xl-block">
     <div class="container">
       <!-- desktop view -->
       <div class="fixed-navbar">
@@ -55,9 +94,6 @@
         <a href="/contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
       </div>
       <!-- end - desktop view -->
-
-      <!-- mobile view -->
-      <!-- end - mobile view -->
     </div>
   </nav>
 
@@ -109,14 +145,30 @@
             <!-- Quick Links -->
             <h4>Quick Links</h4>
             <ul>
-              <a href="#main-office"><li>&rtrif;Main Office</li></a>
-              <a href="#eyfs"><li>&rtrif;Early Years</li></a>
-              <a href="#ks1"><li>&rtrif;Key Stage 1</li></a>
-              <a href="#ks2"><li>&rtrif;Key Stage 2</li></a>
-              <a href="#ks3"><li>&rtrif;Key Stage 3</li></a>
-              <a href="#ks4"><li>&rtrif;Key Stage 4</li></a>
-              <a href="#primary-subject"><li>&rtrif;Primary Subjects</li></a>
-              <a href="#secondary-subject"><li>&rtrif;Secondary Subjects</li></a>
+              <a href="#main-office">
+                <li>&rtrif;Main Office</li>
+              </a>
+              <a href="#eyfs">
+                <li>&rtrif;Early Years</li>
+              </a>
+              <a href="#ks1">
+                <li>&rtrif;Key Stage 1</li>
+              </a>
+              <a href="#ks2">
+                <li>&rtrif;Key Stage 2</li>
+              </a>
+              <a href="#ks3">
+                <li>&rtrif;Key Stage 3</li>
+              </a>
+              <a href="#ks4">
+                <li>&rtrif;Key Stage 4</li>
+              </a>
+              <a href="#primary-subject">
+                <li>&rtrif;Primary Subjects</li>
+              </a>
+              <a href="#secondary-subject">
+                <li>&rtrif;Secondary Subjects</li>
+              </a>
             </ul>
 
             <!-- End of Quick Links -->
