--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png" alt="MIS logo">
       Mooltripakdee International School
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler d-none d-sm-block" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -69,7 +69,7 @@
     </div>
   </nav>
   <!-- end - mobile view -->
-  <nav class="tint d-none d-lg-block">
+  <nav class="tint d-none d-xl-block">
     <div class="container">
 
       <!-- desktop view -->
@@ -442,7 +442,7 @@
                         <label for="exampleInputEmail1" hidden></label>
                         <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                           placeholder="Enter email" required>
-                        <div class="alert alert-danger email-invalid" style="display:none" role="alert">
+                        <div class="email-invalid" style="display:none" role="alert">
                           Must be a valid email address
                         </div>
                         <small id="emailHelp" class="form-text text-muted">We'll never share
@@ -453,7 +453,7 @@
                       <div class="form-group">
                         <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
                         <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"
-                          placeholder="Is there anything else you'd like to tell us?" required></textarea>
+                          placeholder="Enter your message here" required></textarea>
                       </div>
                       <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
