--- a/events/index.html
+++ b/events/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <title>Our School &vert; Mooltripakdee International School</title>
+  <title>Events &vert; Mooltripakdee International School</title>
 
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
@@ -137,7 +137,29 @@
         </section>
       </div>
 
+      <div class="row">
+        <section class="calendar d-none d-sm-block">
+          <iframe
+            src="https://calendar.google.com/calendar/b/2/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=mooltripakdeeinternational%40gmail.com&amp;color=%231B887A&amp;ctz=Asia%2FBangkok"
+            style="
+              border: 1px solid grey;
+            " 
+            height="600"
+            frameborder="0" 
+            scrolling="no">
+          </iframe>
+        </section>
+      </div>
+      <p>If you can't see the calendar properly or using a mobile phone, 
+        <a href="https://calendar.google.com/calendar/embed?src=mooltripakdeeinternational%40gmail.com&ctz=Asia%2FBangkok"
+            target="_blank"
+            noopener
+            noreferrer>
+          click this link
+        </a>
+      </p>
     </article>
+
 
     <div class="three-links">
       <div class="container flex-links">
