--- a/our-school/index.html
+++ b/our-school/index.html
@@ -111,63 +111,19 @@
 
   <main role="main">
     <div class="container grid-container">
-      <section class="welcome">
-        <!-- Carousel slider -->
-        <div id="carouselExampleControls" class="carousel slide carousel-fade carousel-img" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="https://source.unsplash.com/random/400x301" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="https://source.unsplash.com/random/400x302" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="https://source.unsplash.com/random/400x303" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-        <!-- End of Carousel slider -->
-
-        <h1>School's Welcome</h1>
-        <p><b>Mooltripakdee International School(MIS)</b> is a new and developing International School that offers
-          Quality Education to children between 2 and 15 years of age.</p>
-        <p>MIS Preschool & Kindergarten (for children between 2 and 5 years old) combine the Early Year Foundation
-          Stage
-          of the English National Curriculum with Montessori methodology.</p>
-        <p>MIS primary school (children between 5 and 11 years old) is based wholly on the English National Curriculum.
-          MIS secondary school (children aged between 11 and 15 years old) will be a continuation of the English
-          National
-          Curriculum taught by qualified subject teachers.</p>
-        <p>
-          Mooltripakdee International School aims to nurture a happy, safe and welcoming community where children are
-          equipped with positive attitudes, skills and knowledge to enable them to enjoy their childhood and to serve
-          as a foundation for their future development.
-        </p>
-        <p>Set in beautiful grounds, <span class="tooltip-text" title="Mooltripakdee International School">MIS</span>
-          is located on a quiet and peaceful site in the countryside just a few
-          kilometers
-          away from central Pattaya along the Chaiyapornvitee Road near Mabprachan Lake</p>
-        Sincerely<br>
-        School Management
-      </section>
     </div>
 
     <article class="container">
       <hr>
-      <div class="row">
 
+      <div class="row">
         <div class="col-lg-3 sticky-parent">
           <aside class="sticky">
             <h5>Quick Links</h5>
             <ul>
+              <a href="#welcome">
+                <li>&rtrif;Principal's Welcome</li>
+              </a>
               <a href="#mission">
                 <li>&rtrif;Mission</li>
               </a>
@@ -191,6 +147,98 @@
         </div>
 
         <section class="col-lg-9">
+          <!-- Carousel slider -->
+          <!-- <div id="carouselExampleControls" class="carousel slide carousel-fade carousel-img" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x301" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x302" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x303" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div> -->
+          <!-- End of Carousel slider -->
+
+          <h1 id="welcome" class="text-center">Principal's Welcome</h1>
+          <img class="img-fluid principal-photo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547622320/mis/mis-ourschool/school-principal.jpg"
+            alt="School Principal image">
+          <p>
+            As Principal of Mooltripakdee International School, it is my pleasure to welcome you to our school
+            website and we thank you for taking the time to visit. We hope to provide you with some useful
+            information about our school and to give you an insight into the wealth of experiences we offer our
+            students.
+          </p>
+          <p>
+            Mooltripakdee International School (MIS) opened its doors to students on 25th August 2010. The school was
+            built and designed by Ms Wiravan Mooltripakdee (Ms Wee). Her vision was to build on the success of our
+            then sister school - MCCI, a Montessori school, located at Naklua Soi 16 - by offering primary school
+            education in addition to Preschool and kindergarten. In July 2011, after twenty-two years operating as a
+            school, MCCI had to close due to the lease on the land expiring. MCCI teachers and the remaining students
+            amalgamated with MIS in August 2011. Offering a broadest range of practical and academic subjects under
+            the National Curriculum for England, we endeavour to provide each student with a school that challenges
+            and inspires them to reach their individual potential.
+          </p>
+          <p>
+            Here at MIS, the student is not only critically important in the context of everything that goes on in
+            the school: in our school, it is our aim that they actually know that they are important, that they feel
+            valued and respected and leave here happy every evening. They are allowed to grow and mature in a safe,
+            creative and holistic environment that is constantly changing to meet their needs.
+          </p>
+          <p>
+            I am immensely proud of and impressed by the professionalism, commitment, dedication and teamwork of our
+            staff to ensure an excellent education for all our students in a caring and supportive environment.
+          </p>
+          <p>
+            Recently introduced structures such as our school-wide ESL program, a developing SEN program, GL
+            assessment academic monitoring, in conjunction with an already well-established testing system enables us
+            to promote an environment where the emotional, behavioural and educational needs of our students can be
+            supported in a positive and reassuring way.
+          </p>
+          <p>
+            We provide an extensive range of extra-curricular activities to suit all tastes and interests, from the
+            areas of Sports, Theatre, Music, Art, Field Trips, Performance events, Math and Spelling competitions,
+            Yoga and Dance to mention but a few. Wholesome participation is encouraged to ensure the well-being and
+            happiness of each and every student in our school.
+          </p>
+          <p>
+            MIS is inclusive in every sense of the word, the cultural, sporting, academic and other successes of all
+            of our students and staff are proudly celebrated together. Our students have a very strong sense of pride
+            in our school, which is demonstrated in their respectful and courteous behaviour towards others, both in
+            school and outside and their willingness to advance and promote our school.
+          </p>
+          <p>
+            Our school is a vibrant center for academics, sports, and arts in our community, and I would like to
+            acknowledge and thank all the people who make our school a hub of learning – Our students, parents and
+            families, Thai and Foreign teachers and assistants, our support staff, and our owner, Ms. Wee for their
+            continued support of the school. Together we will continue building a strong tradition of excellent
+            education at Mooltripakdee International School.
+          </p>
+          <p>
+            I hope you enjoy your visit to the website and should you wish to contact us, please find details on the
+            contact page.
+          </p>
+          <span>
+            Yours in Education,
+          </span>
+          <p></p>
+
+          <p>
+            Mark Grittner<br>
+            School Principal
+          </p>
+
           <a name="mission"></a>
           <h2>Mission</h2>
           <p>Mooltripakdee International School aims to nurture a happy, safe and welcoming community where children
