changing some texts and images

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -99,7 +99,7 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="/img/team.jpg" alt="">
+      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547710797/mis/mis-ourteam/staff_2018-19.jpg" alt="Group photo of Staffs 2018-19">
       <figcaption class="container">
         <span class="sub-header-location">MIS Team - Main Office</span>
       </figcaption>
@@ -121,22 +121,23 @@
           </span>
         </span>
 
-        <span class="header__text-box">
+        <div class="header__text-box">
           <div class="header__text-box--title">
-            Vision
+            VISION
           </div>
           <span class="header__text-box--description">
-            Empower the people to improve lives with dynamic business opportunities and innovative products.
+            Insert School Vision Here
           </span>
+          <hr>
           <div class="header__text-box--title">
-            Mission
+            MISSION
           </div>
           <span class="header__text-box--description">
             To nurture a happy, safe & welcoming community where children are equipped with positive attitudes, skills
             & knowledge to enable them to enjoy their childhood & to server as a foundation for their future
             development.
           </span>
-        </span>
+        </div>
       </div>
 
       <div class="row">
