--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       </div>
     </section>
 
-    <div id="showcase" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="showcase" class="carousel slide carousel-fade d-none d-sm-block" data-ride="carousel">
       <div class="carousel-inner">
 
         <div class="carousel-item active">
@@ -282,10 +282,10 @@
             alt="First slide"> -->
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547630774/mis/mis-homepage/library_1.jpg"
             alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Enjoy solitude reading</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">School Library</span>
             </div>
           </div>
@@ -294,10 +294,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
-              <span class="showcase-main">Lorem ipsum dolor sit amet.</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-main">Reading @Library</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">School Library &middot; Front Hall</span>
             </div>
           </div>
@@ -318,10 +318,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/pool.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Enjoy with your Friends</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">Indoor Pool</span>
             </div>
           </div>
@@ -330,10 +330,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496801/mis/mis-homepage/building.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Meet up on the Quad</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">The Quad</span>
             </div>
           </div>
@@ -342,10 +342,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547630776/mis/mis-homepage/chemlab_2.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Relaxing by the Park</span>
-              <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span>
+              <!-- <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span> -->
               <span class="showcase-location">Calming Environment</span>
             </div>
           </div>
