change header image @academics

--- a/academics/index.html
+++ b/academics/index.html
@@ -102,7 +102,7 @@
 
   <header class="sub-header-image">
     <figure>
-      <img src="../img/academics.jpg" alt="">
+      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547775614/mis/mis-academics/subject-building-2.jpg" alt="Subject Building">
       <figcaption class="container">
         <span class="sub-header-location">Library - Secondary Building</span>
       </figcaption>
